# petsDRF

./: .gitignore  docker_compose.yml  pyproject.toml  sss.py
src/apps/pet/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/pet/migrations/: 0001_initial.py  0002_alter_orderitembd_discount.py  0002_alter_sellpricebd_discount_id.py  0003_alter_sellpricebd_discount_id.py  0003_orderbd_number_order.py  0004_rename_stockorderitem_stockorderitemdb.py
src/core/: settings.py  urls.py
src/core/core/: settings.py
